--- a/src/pages/introduccion.astro
+++ b/src/pages/introduccion.astro
@@ -44,6 +44,7 @@ import QuickNote from "@/components/QuickNote.astro";
         <div id="goals-completed" class="hidden">
             <QuickNote bgcolor="#BEFFF7">
                 Puedes seguir haciendo pruebas o pasar a la siguiente sección.
+                <a href="/variables-y-tipos-de-datos">Variables y Tipos de datos</a>
             </QuickNote>
         </div>
 
