--- a/src/components/Collapsible.astro
+++ b/src/components/Collapsible.astro
@@ -45,9 +45,9 @@ const { title } = Astro.props
 <script>
     const coll = document.getElementsByClassName("collapsible");
     for (let i = 0; i < coll.length; i++) {
-        coll[i].addEventListener("click", function () {
-            this.classList.toggle("active");
-            const content = this.nextElementSibling;
+        coll[i].addEventListener("click", function (e: any) {
+            e.classList.toggle("active");
+            const content = e.nextElementSibling;
             if (content.style.display === "block") {
                 content.style.display = "none";
             } else {
