--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import Header from "@/components/Header.astro";
 import Menu from "@/components/Menu.astro";
 import Footer from "@/components/Footer.astro";
 
+import Chevron from "@/icons/Chevron.astro";
+
 const { title, description } = Astro.props;
 ---
 
@@ -20,7 +22,10 @@ const { title, description } = Astro.props;
             <div class="header-wrapper">
                 <Header />
             </div>
-            <div class="nav-wrapper"><Menu /></div>
+            <div class="nav-wrapper">
+                <button class="nav-button"><Chevron /></button>
+                <div class="menu-wrapper"><Menu /></div>
+            </div>
             <div class="main-wrapper">
                 <slot />
             </div>
@@ -60,7 +65,7 @@ const { title, description } = Astro.props;
     .nav-wrapper {
         grid-area: nav;
         max-width: 300px;
-        /* background-color: green; */
+        border-right: 1px solid #ddd;
     }
 
     .main-wrapper {
@@ -68,11 +73,63 @@ const { title, description } = Astro.props;
         max-width: 1000px;
         margin: 0 auto;
         width: 100%;
-        /* background-color: red; */
-        width: 100%;
     }
 
     .footer-wrapper {
         grid-area: footer;
     }
+
+    .nav-button {
+        display: none;
+    }
+
+    @media (max-width: 768px) {
+        .layout {
+            grid-template-columns: auto auto;
+        }
+
+        .nav-wrapper {
+            /* width: 30px; */
+            height: 100%;
+        }
+
+        .menu-wrapper {
+            display: none;
+        }
+
+        .nav-button {
+            display: flex;
+            border: 1px solid #ddd;
+            background-color: grey;
+            cursor: pointer;
+            border-radius: 100%;
+            height: 32px;
+            width: 32px;
+            align-items: center;
+            justify-content: center;
+            transform: translateX(50%);
+            margin-top: 40px;
+            float: right;
+        }
+
+        .menu-wrapper.active {
+            display: block;
+        }
+
+        .nav-button.active {
+            transform: rotate(180deg) translateX(-50%);
+        }
+    }
 </style>
+
+<script>
+    const navButton = document.querySelector(".nav-button");
+    const menuWrapper = document.querySelector(".menu-wrapper");
+
+    if (navButton && menuWrapper) {
+        navButton.addEventListener("click", () => {
+            navButton.classList.toggle("active");
+            menuWrapper.classList.toggle("active");
+        });
+    }
+</script>
