--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,11 +1,15 @@
-<nav>
+<nav id="menu">
     <ul>
         <h2>Menu</h2>
-        <li><a href="/introduccion">Introducción: ¿Qué es JavaScript?</a></li>
+        <li>
+            <a href="/introduccion">Introducción: ¿Qué es JavaScript?</a>
+        </li>
         <li>
             <a href="/variables-y-tipos-de-datos">Variables y Tipos de datos</a>
         </li>
-        <li><a href="/estructuras-de-control">Estructuras de control</a></li>
+        <li>
+            <a href="/estructuras-de-control">Estructuras de control</a>
+        </li>
         <li><a href="/bucles">Bucles</a></li>
         <li><a href="/funciones">Funciones</a></li>
         <!-- <li><a href="/clases">Clases</a></li> -->
@@ -19,7 +23,7 @@
 
 <style>
     nav {
-        background-color: #f1f1f1;
+        /* background-color: #f1f1f1; */
         height: 100%;
         border-radius: 12px;
     }
