--- a/src/components/Collapsible.astro
+++ b/src/components/Collapsible.astro
@@ -1,59 +1,60 @@
 ---
-const { title } = Astro.props
+const {title} = Astro.props;
 ---
-<div>
-    <button class="collapsible">{title}</button>
-    <div class="content">
+
+<astro-collapsible>
+    <button>
+        {title}
+    </button>
+
+    <div class="hidden">
         <slot />
     </div>
-</div>
-
-<style>
-    .collapsible {
-        background-color: #eee;
-        color: #444;
-        cursor: pointer;
-        padding: 18px;
-        width: 100%;
-        border: none;
-        text-align: left;
-        outline: none;
-        font-size: 15px;
-    }
-
-    .content {
-        padding: 0 18px;
-        display: none;
-        overflow: hidden;
-        background-color: #f1f1f1;
-    }
-
-    .collapsible:after {
-        content: '\02795'; /* Unicode character for "plus" sign (+) */
-        font-size: 13px;
-        color: white;
-        float: right;
-        margin-left: 5px;
-    }
-
-    .active:after {
-        content: "\2796"; /* Unicode character for "minus" sign (-) */
-    }
-
-</style>
+</astro-collapsible>
 
 <script>
-    const coll = document.getElementsByClassName("collapsible");
-    for (let i = 0; i < coll.length; i++) {
-        coll[i].addEventListener("click", function (e: any) {
-            e.classList.toggle("active");
-            const content = e.nextElementSibling;
-            if (content.style.display === "block") {
-                content.style.display = "none";
-            } else {
-                content.style.display = "block";
-            }
-        });
+    class Collapsible extends HTMLElement {
+        constructor() {
+            super();
+            let show = this.getAttribute('show');
+            // @ts-ignore
+            this.querySelector('button').addEventListener('click', () => {
+                if (show === 'true') {
+                    show = 'false';
+                } else {
+                    show = 'true';
+                }
+                // @ts-ignore
+                this.querySelector('div').classList.toggle('hidden');
+                this.setAttribute('show', show);
+            });
+        }
     }
-    
+
+    customElements.define('astro-collapsible', Collapsible);
 </script>
+
+<style is:inline>
+    .hidden {
+        display: none;
+    }
+</style>
+
+<style>
+    button {
+        border: 0;
+        background-color: transparent;
+        opacity: .7;
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+    button:hover {
+        cursor: pointer;
+        opacity: 1;
+    }
+
+    button:active {
+        opacity: .5;
+    }
+</style>
