--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,6 +73,8 @@ const { title, description } = Astro.props;
         max-width: 1000px;
         margin: 0 auto;
         width: 100%;
+        padding-right: 20px;
+        box-sizing: border-box;
     }
 
     .footer-wrapper {
